dotnet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-demoapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-demoapp
  template:
    metadata:
      labels:
        app: dotnet-demoapp
    spec:
      containers:
        - name: dotnet-demoapp
          image: dotnet-demoapp:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
