dotnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-demoapp-service
  namespace: default
spec:
  selector:
    app: dotnet-demoapp
  ports:
    - port: 80
      targetPort: 80
