hpa.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dotnet-demoapp-route
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - demo.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dotnet-demoapp-service
          port: 80
